--- a/app/templates/play/item.html
+++ b/app/templates/play/item.html
@@ -38,8 +38,8 @@
         <tr>
             <td>
                 {% if char_id %}
-                    {% set letter = link_letters.next() %}
                     {% set link = url_for('play_char', char_id=char_id) %}
+                    {% set letter = link_letters.next(link) %}
                     <script>
                         linkForKey['{{ letter }}'] = "{{ link }}";
                     </script>
@@ -47,8 +47,8 @@
                     <a href="{{ link }}">{{ container_name }}</a>
                     <span>[{{ letter }}]</span><br>
                 {% elif loc_id %}
-                    {% set letter = link_letters.next() %}
                     {% set link = url_for('play_location', loc_id=loc_id) %}
+                    {% set letter = link_letters.next(link) %}
                     <script>
                         linkForKey['{{ letter }}'] = "{{ link }}";
                     </script>
@@ -203,8 +203,8 @@
                             {% if item.id == current.id %}
                                 <td><strong>{{ item.name}}</strong></td>
                             {% else %}
-                                {% set letter = link_letters.next() %}
                                 {% set link = url_for('play_item', item_id=item.id, char_id=char_id, loc_id=loc_id) %}
+                                {% set letter = link_letters.next(link) %}
                                 <script>
                                     linkForKey['{{ letter }}'] = "{{ link }}";
                                 </script>
@@ -230,8 +230,8 @@
                         {% if item.id == current.id %}
                             <td><strong>{{ item.name}}</strong></td>
                         {% else %}
-                            {% set letter = link_letters.next() %}
                             {% set link = url_for('play_item', item_id=item.id, char_id=char_id, loc_id=loc_id) %}
+                            {% set letter = link_letters.next(link) %}
                             <script>
                                 linkForKey['{{ letter }}'] = "{{ link }}";
                             </script>
@@ -279,8 +279,8 @@
                         <th>Required</th>
                     </tr>
                     {% for used_for in outerscope.used_as_source %}
-                        {% set letter = link_letters.next() %}
                         {% set link = url_for('play_item', item_id=used_for.item.id, char_id=char_id, loc_id=loc_id) %}
+                        {% set letter = link_letters.next(link) %}
                         <script>
                             linkForKey['{{ letter }}'] = "{{ link }}";
                         </script>
