--- a/app/templates/play/location.html
+++ b/app/templates/play/location.html
@@ -32,8 +32,8 @@
     <h2>Characters Here</h2>
     <ul>
         {% for char in game_data.characters if char.location.id == current.id %}
-            {% set letter = link_letters.next() %}
             {% set link = url_for('play_char', char_id=char.id) %}
+            {% set letter = link_letters.next(link) %}
             <script>
                 linkForKey['{{ letter }}'] = "{{ link }}";
             </script>
@@ -48,8 +48,8 @@
     <ul class="item-list">
         {% for item_at in current.items %}
             {% set item = item_at.item %}
-            {% set letter = link_letters.next() %}
             {% set link = url_for('play_item', item_id=item.id, loc_id=current.id) %}
+            {% set letter = link_letters.next(link) %}
             <script>
                 linkForKey['{{ letter }}'] = "{{ link }}";
             </script>
@@ -70,8 +70,8 @@
     <h2>Neighboring Locations</h2>
     <ul>
         {% for destination, distance in current.destinations.items() %}
-            {% set letter = link_letters.next() %}
             {% set link = url_for('play_location', loc_id=destination.id) %}
+            {% set letter = link_letters.next(link) %}
             <script>
                 linkForKey['{{ letter }}'] = "{{ link }}";
             </script>
