--- a/app/templates/play/overview.html
+++ b/app/templates/play/overview.html
@@ -35,8 +35,8 @@
             <th>Most Recent Interaction</th>
         </tr>
         {% for interaction in interactions %}
-            {% set letter = link_letters.next() %}
             {% set link = interaction.action_link %}
+            {% set letter = link_letters.next(link) %}
             <script>
                 linkForKey['{{ letter }}'] = "{{ link }}";
             </script>
@@ -75,8 +75,8 @@
             {% for char in charlist %}
                 <tr><td>
                     {% if char.char_id %}
-                        {% set letter = link_letters.next() %}
                         {% set link = url_for('play_char', char_id=char.char_id) %}
+                        {% set letter = link_letters.next(link) %}
                         <script>
                             linkForKey['{{ letter }}'] = "{{ link }}";
                         </script>
@@ -85,8 +85,8 @@
                     {% endif %}
                 </td><td>
                     {% if char.loc_id %}
-                        {% set letter = link_letters.next() %}
                         {% set link = url_for('play_location', loc_id=char.loc_id) %}
+                        {% set letter = link_letters.next(link) %}
                         <script>
                             linkForKey['{{ letter }}'] = "{{ link }}";
                         </script>
@@ -106,8 +106,8 @@
                 <th>Quantity</th>
             </tr>
             {% for item in other_entities.items %}
-                {% set letter = link_letters.next() %}
                 {% set link = url_for('play_item', item_id=item.id) %}
+                {% set letter = link_letters.next(link) %}
                 <script>
                     linkForKey['{{ letter }}'] = "{{ link }}";
                 </script>
