--- a/app/templates/play/character.html
+++ b/app/templates/play/character.html
@@ -49,7 +49,7 @@
     {% if current.location %}
         <h2>Location</h2>
         <ul>
-        {% set link = url_for('play_location', loc_id=current.location.id) %}
+        {% set link = url_for('play_location', loc_id=current.location.id, char_id=current.id) %}
         {% set letter = link_letters.next(link) %}
         <script>
             linkForKey['{{ letter }}'] = "{{ link }}";
